--- a/login.html
+++ b/login.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
     <h1>Bienvenidos Login
-        
+
     </h1>
 </body>
 </html>
