--- a/login.html
+++ b/login.html
@@ -8,8 +8,26 @@
     <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
-    <h1>Bienvenidos Login
+    <div class="login">  
+    <img src="img/glealways-logo.jpg" alt="glealways">
+    <h1>LOGIN</h1>
+    <FORM>
+        <!--   USERNAME -->  
+        <label for="username"> Username </label>
+        <input type="text" placeholder="Enter Username">
+        
+        <!--   PASSWORD -->  
+        <label for="password"> Username </label>
+        <input type="password" placeholder="Enter Password">
+      
+        <input type="submit" value="Log In">
 
-    </h1>
+        <a href="#"> Lost your password? </a>
+        <a href="#"> Don´t have an account? </a>
+
+
+    </FORM>
+</div>
+
 </body>
 </html>
