--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
-    <div class="login">  
-    <img src="img/glealways-logo.jpg" alt="glealways">
+    <div class="login-contenedor">  
+    <img class= "avatar" src="img/glealways-logo.jpg" alt="glealways">
     <h1>LOGIN</h1>
     <FORM>
         <!--   USERNAME -->  
