--- a/login.html
+++ b/login.html
@@ -13,17 +13,17 @@
     <h1>LOGIN</h1>
     <FORM>
         <!--   USERNAME -->  
-        <label for="username"> Username </label>
-        <input type="text" placeholder="Enter Username">
+        <label for="username"> Usuario </label>
+        <input type="text" placeholder="Introduzca usuario">
         
         <!--   PASSWORD -->  
-        <label for="password"> Username </label>
-        <input type="password" placeholder="Enter Password">
+        <label for="password"> Contraseña </label>
+        <input type="password" placeholder="Introduzca contraseña">
       
-        <input type="submit" value="Log In">
+        <input type="submit" value="Iniciar sesión">
 
-        <a href="#"> Lost your password? </a>
-        <a href="#"> Don´t have an account? </a>
+        <a href="#"> Olvidaste tu contraseña </a>
+        <a href="#"> Crear cuenta </a>
 
 
     </FORM>
