--- a/login.html
+++ b/login.html
@@ -12,13 +12,13 @@
     <img class= "avatar" src="img/glealways-logo.jpg" alt="glealways">
     <h1>LOGIN</h1>
     <FORM>
-        <!--   USERNAME -->  
+        <!--   USUARIO -->  
         <label for="username"> Usuario </label>
-        <input type="text" placeholder="Introduzca usuario">
+        <input type="text" placeholder="Ingrese usuario">
         
-        <!--   PASSWORD -->  
+        <!--   CONTRASEÑA -->  
         <label for="password"> Contraseña </label>
-        <input type="password" placeholder="Introduzca contraseña">
+        <input type="password" placeholder="Ingrese contraseña">
       
         <input type="submit" value="Iniciar sesión">
 
