--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
       
         <input type="submit" value="Iniciar sesión">
 
-        <a href="#"> Olvidaste tu contraseña </a>
+        <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
 
 
