--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="css/master.css">
 </head>
+
 <body>
     <div class="login-contenedor">  
     <img class= "avatar" src="img/glealways-logo.jpg" alt="glealways">
@@ -20,7 +21,7 @@
         <label for="password"> Contraseña </label>
         <input type="password" placeholder="Ingrese contraseña">
       
-        <input type="submit" value="Iniciar sesión">
+        <input type="submit" value="Iniciar sesión"> <a href="menu.html"> 
 
         <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
