--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         <label for="password"> Contraseña </label>
         <input type="password" placeholder="Ingrese contraseña">
       
-        <input type="submit" value="Iniciar sesión">  
+        <input type="submit" value="Iniciar sesión"  >  <a href="menu.html"></a>
 
         <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
