--- a/login.html
+++ b/login.html
@@ -21,8 +21,7 @@
         <label for="password"> Contraseña </label>
         <input type="password" placeholder="Ingrese contraseña">
       
-        <input type="submit" value="Iniciar sesión"  href="menu.html" >
-
+        <button style="margin-left: 40px" ><h3> <a href="menu.html"> Iniciar sesion </a> </h3> </button>
         <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
 
