--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         <input type="password" placeholder="Ingrese contraseña">
       
         <input type="submit" value="Iniciar sesión">
-        <button style="margin-left: 40px" ><h3> <a href="menu.html"> Iniciar sesion </a> </h3> </button>
+         <a href="menu.html"> Iniciar sesion </a> 
         <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
 
