--- a/login.html
+++ b/login.html
@@ -21,11 +21,11 @@
         <label for="password"> Contraseña </label>
         <input type="password" placeholder="Ingrese contraseña">
       
-        <button><input type="submit" value="Iniciar sesión"></a></button>
+        <input type="submit" >
          <a href="menu.html"> Iniciar sesion </a> 
         <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
-
+<input type="text">
 
     </FORM>
 </div>
