--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         <label for="password"> Contraseña </label>
         <input type="password" placeholder="Ingrese contraseña">
       
-        <a href="menu.html"> <input type="submit" >Iniciar sesion </a>
+        <a href="menu.html"> Iniciar sesion <input type="submit" ></a>
         <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
 <input type="text">
