--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         <label for="password"> Contraseña </label>
         <input type="password" placeholder="Ingrese contraseña">
       
-        <a href="menu.html">dfff</a><input type="submit" value="Iniciar sesión">
+        <a href="menu.html" input type="submit" value="Iniciar sesión">
         
         <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
