--- a/menu.html
+++ b/menu.html
@@ -15,10 +15,9 @@
             <li><a href="">Inicio</a></li>
             <li><a href="">Productos</a>
                 <ul>
-                    <li><a href="">Submenu1</a></li>
-                    <li><a href="">Submenu2</a></li>
-                    <li><a href="">Submenu3</a></li>
-                    <li><a href="">Submenu4</a>
+                    <li><a href="">Nuevos Productos</a></li>
+                    <li><a href="">Productos Mary Kay</a></li>
+                    <li><a href="">Conoce tu Piel</a> 
                         <ul> 
                             <li><a href="">Submenu1</a></li>
                             <li><a href="">Submenu2</a></li>
@@ -91,13 +90,8 @@
 
 
             <li><a href="">Ofertas</a>
-                <ul>
-                    <li><a href="">Submenu1</a></li>
-                    <li><a href="">Submenu2</a></li>
-                    <li><a href="">Submenu3</a></li>
-                    <li><a href="">Submenu4</a></li>
-                </ul>
             </li>
+
             <li><a href="">Quienes Somos</a></li>
             <li><a href="">Contacto</a></li>
         </ul>
