--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     
+    <div id="banner">
+        <img src="img/glealways-logo.jpg" id="img_banner" >
+    </div>
+
+
     <div id="header">
         <ul class="nav">
             <li><a href="">Inicio</a></li>
@@ -18,12 +23,7 @@
                     <li><a href="">Nuevos Productos</a></li>
                     <li><a href="">Productos Mary Kay</a></li>
                     <li><a href="">Conoce tu Piel</a> 
-                        <ul> 
-                            <li><a href="">Submenu1</a></li>
-                            <li><a href="">Submenu2</a></li>
-                            <li><a href="">Submenu3</a></li>
-                            <li><a href="">Submenu4</a></li>
-                        </ul>
+                        
                     </li>
                 </ul>
             </li>
