--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 <body>
     
     <div id="banner">
-        <img src="img/glealways-logo.jpg" id="img_banner" width="200" >
+        <img style="float:left;" src="img/glealways-logo.jpg" id="img_banner" >
     </div>
 
 
