--- a/menu.html
+++ b/menu.html
@@ -96,5 +96,38 @@
             <li><a href="">Contacto</a></li>
         </ul>
     </div>
+
+
+
+    <section id="galeria" class="container">
+        <div class="text-center pt-5 ">
+            <h1>galeria</h1>
+        </div>
+
+
+        <div class="row">
+            <div class="col-lg-4">
+                <img src="img/MK1.jpeg" alt="Galeria Imagen">
+            </div>
+
+            <div class="col-lg-4">
+                <img src="img/MK2.jpeg" alt="Galeria Imagen">
+            </div>
+
+            <div class="col-lg-4">
+            <img src="img/MK3.jpeg" alt="Galeria Imagen">
+            </div>
+
+            <div class="col-lg-4">
+            <img src="img/MK4.jpeg" alt="Galeria Imagen">
+            </div>
+
+            <div class="col-lg-4">
+            <img src="img/MK5.jpeg" alt="Galeria Imagen">
+            </div>
+        </div>
+        
+
+    </section>
 </body>
 </html>
