--- a/menu.html
+++ b/menu.html
@@ -110,19 +110,19 @@
                 <img src="img/MK1.jpeg" alt="Galeria Imagen">
             </div>
 
-            <div class="col-lg-4 col-md-6 col-md-12">
+            <div class="col-lg-4 ">
                 <img src="img/MK2.jpeg" alt="Galeria Imagen">
             </div>
 
-            <div class="col-lg-4 col-md-6 col-md-12">
+            <div class="col-lg-4">
             <img src="img/MK3.jpeg" alt="Galeria Imagen">
             </div>
 
-            <div class="col-lg-4 col-md-6 col-md-12">
+            <div class="col-lg-4">
             <img src="img/MK4.jpeg" alt="Galeria Imagen">
             </div>
 
-            <div class="col-lg-4 col-md-6 col-md-12">
+            <div class="col-lg-4">
             <img src="img/MK5.jpeg" alt="Galeria Imagen">
             </div>
         </div>
