--- a/menu.html
+++ b/menu.html
@@ -106,7 +106,7 @@
 
 
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-md-12">
+            <div class="col-lg-4 ">
                 <img src="img/MK1.jpeg" alt="Galeria Imagen">
             </div>
 
