--- a/menu.html
+++ b/menu.html
@@ -106,23 +106,23 @@
 
 
         <div class="row">
-            <div class="col-lg-4 ">
+            <div class="col-lg-4 col-md-6 col-sm-12">
                 <img src="img/MK1.jpeg" alt="Galeria Imagen">
             </div>
 
-            <div class="col-lg-4 ">
+            <div class="col-lg-4 col-md-6 col-sm-12">
                 <img src="img/MK2.jpeg" alt="Galeria Imagen">
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-sm-12">
             <img src="img/MK3.jpeg" alt="Galeria Imagen">
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-sm-12">
             <img src="img/MK4.jpeg" alt="Galeria Imagen">
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-sm-12">
             <img src="img/MK5.jpeg" alt="Galeria Imagen">
             </div>
         </div>
