--- a/menu.html
+++ b/menu.html
@@ -103,16 +103,15 @@
         <div class="text-center pt-5 ">
         </div>
 
-        <br><br>
+
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12">
-                <img src="img/MK1.jpeg" alt="Galeria Imagen ">
+                <img src="img/MK1.jpeg" alt="Galeria Imagen " width="20px" height="30px">
             
-                <img src="img/MK2.jpeg" alt="Galeria Imagen">
+                <img src="img/MK2.jpeg" alt="Galeria Imagen"width="20px" height="30px">
         
-                <img src="img/MK3.jpeg" alt="Galeria Imagen">
+                <img src="img/MK3.jpeg" alt="Galeria Imagen"width="20px" height="30px">
             </div>
-            <br><br>
 
             <div class="col-lg-4 col-md-6 col-sm-12">
             <img src="img/MK4.jpeg" alt="Galeria Imagen">
