--- a/menu.html
+++ b/menu.html
@@ -101,6 +101,8 @@
 
     <section id="galeria" class="container">
         <div class="text-center pt-5 ">
+            <br><br>
+            <h1>Inicio</h1>
         </div>
 
 
@@ -108,9 +110,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <img src="img/MK1.jpeg" alt="Galeria Imagen" >
             
-                <img src="img/MK2.jpeg" alt="Galeria Imagen"width="20px" height="30px">
+                <img src="img/MK2.jpeg" alt="Galeria Imagen" >
         
-                <img src="img/MK3.jpeg" alt="Galeria Imagen"width="20px" height="30px">
+                <img src="img/MK3.jpeg" alt="Galeria Imagen">
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-12">
