--- a/menu.html
+++ b/menu.html
@@ -107,7 +107,7 @@
 
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12">
-                <img src="img/MK1.jpeg" alt="Galeria Imagen">
+                <img src="img/MK1.jpeg" alt="Galeria Imagen" style="left:50px">
             
                 <img src="img/MK2.jpeg" alt="Galeria Imagen" >
         
