--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
         <label for="password"> Contraseña </label>
         <input type="password" placeholder="Ingrese contraseña">
       
-        <input type="submit" value="Iniciar sesión">
+        <input type="submit" value="Iniciar sesión" href="menu.html" >
          <a href="menu.html"> Iniciar sesion </a> 
         <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
