--- a/login.html
+++ b/login.html
@@ -25,7 +25,8 @@
         <input type="password" placeholder="Ingrese contraseña">
       
         <input type="submit" value="Iniciar sesión" href="menu.html" >
-         <a href="menu.html"> Iniciar sesion </a> 
+        <input type="button" value="ir a pagina 1" onClick="enviar('pagina1.html')">
+
         <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
 
