--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
         <input type="password" placeholder="Ingrese contraseña">
       
         <input type="submit" value="Iniciar sesión" href="menu.html" >
-        <input type="button" value="ir a pagina 1" onClick="enviar('pagina1.html')">
+        <input type="button" value="ir a pagina 1" onClick="enviar('menu.html')">
 
         <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
