--- a/login.html
+++ b/login.html
@@ -24,9 +24,8 @@
         <label for="password"> Contraseña </label>
         <input type="password" placeholder="Ingrese contraseña">
       
-        <input type="submit" value="Iniciar sesión" href="menu.html" >
-        <input type="button" value="ir a pagina 1" onClick="enviar('menu.html')">
-
+        <input type="submit" value="Iniciar sesión">
+         <a href="menu.html"> Iniciar sesion </a> 
         <a href="#"> Olvidaste tu contraseña </a> <br>
         <a href="#"> Crear cuenta </a>
 
