--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,11 @@
     <title>Menu</title>
     <link rel="stylesheet" href="css/menu.css">
 
+    <link rel="stylesheet" href="../ASEGURAMIENTO/css/bootstrap.min.css">  
+    <script src="http://code.jquery.com/jquery.js"> </script>
+    <script src="../ASEGURAMIENTO/css/bootstrap.min.css"> </script>
+    <script src="../bootstrap-5.0.2-dist/js/bootstrap.min.js"> </script>
+
 </head>
 <body>
     
