--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,6 @@
     <title>Menu</title>
     <link rel="stylesheet" href="css/menu.css">
 
-
 </head>
 <body>
     
@@ -15,19 +14,15 @@
         <img style="float:left;" src="img/glealways-logo.jpg" id="img_banner" >
     </div>
 
-
     <div id="header">
         <ul class="nav">
             <li><a href="">Inicio</a></li>
             <li><a href="">Productos</a>
                 <ul>
-                    <li><a href="">Nuevos Productos</a></li>
-                        
+                    <li><a href="1NuevosProductos.html">Nuevos Productos</a></li>                        
                     </li>
                 </ul>
             </li>
-
-
 
             <li><a href="">Para Él </a>
                 <ul>
