--- a/menu.html
+++ b/menu.html
@@ -10,12 +10,7 @@
 </head>
 <body>
     
-    <div id="banner-blanco">
-        <img style="float:left;" src="img/glealways-logo.jpg" id="img_banner" >
-    </div>
-
-    <div id="banner">
-    </div>
+    <div id="banner">  </div>
 
     <div id="header">
         <ul class="nav">
@@ -46,17 +41,15 @@
                             <li><a href="">Mayoristas</a></li> 
                         </ul>
                     </li>       
-
                 </ul>
             </li>
-
         </ul>
     </div>
 
 
 
     <section id="galeria" class="container">
-        <div class="text-center pt-10 ">
+        <div class="text-center pt-20 ">
             <br><br><br><br>
         </div>
 
