--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
             <li><a href="">Inicio</a></li>
             <li><a href="">Productos</a>
                 <ul>
-                    <li><a href="1NuevosProductos.html">Nuevos Productos</a></li>
+                    <li><a href="1NuevoProducto.html">Nuevos Productos</a></li>
                     <li><a href="">Para él</a></li>
                     <li><a href="">Para ella</a></li>       
                 </ul>
