--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+
+    <script src="http://code.jquery.com/jquery.js"> </script>
+    <script src="../bootstrap-5.0.2-dist/js/bootstrap.min.js"> </script>
+    
     <!-- enlace del css de la pagina principal de menu-->
     <link rel="stylesheet" href="css/menu.css">
     <!--font de las redes sociales-->
@@ -22,7 +26,7 @@
 
     <div id="header" >
         <ul class="nav">
-            <li><a href="">Inicio</a></li>
+            <li><a href="menu.html">Inicio</a></li>
             <li><a href="">Productos</a>
                 <ul>
                     <li><a href="1NuevoProducto.html">Nuevos Productos</a></li>
@@ -68,14 +72,14 @@
 
     <!-- Imagenes con movimeinto-->
 
-    <section id="galeria" class="container" >
+    <section id="galeria" class="container"  >
         <div class="text-center pt-20 ">
             <br><br><br><br>
         </div>
 
         <div class="row" >
-            <div class="col-lg-4 col-md-6 col-sm-12">
-                <img src="img/MK1.jpeg" alt="Galeria Imagen">
+            <div class="col-lg-4 col-md-6 col-sm-12" >
+                <img src="img/MK1.jpeg" alt="Galeria Imagen" >
                 <img src="img/MK2.jpeg" alt="Galeria Imagen" >
                 <img src="img/MK3.jpeg" alt="Galeria Imagen">
             </div>
